--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <meta property="og:description" content="最近やったことなどが時系列で簡単にまとめられています。">
+    <meta property="og:image" content="https://github.com/fkubota/timeline/blob/main/src/images/design.png?raw=true">
+    <meta property="twitter:title" content="fkubota's timeline">
+    <meta property="twitter:site" content="@fkubota_">
+    <meta property="twitter:card" content="summary_large_image">
   </head>
   <body>
     <noscript>
