--- a/public/index.html
+++ b/public/index.html
@@ -22,3 +22,13 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C5Z2NF5YT8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C5Z2NF5YT8');
+</script>
